--- a/package.json
+++ b/package.json
@@ -13,14 +13,20 @@
     "start": "node dist/index.js",
     "clean": "rm -rf dist"
   },
-  "keywords": ["changeset", "changelog", "cli"],
+  "keywords": [
+    "changeset",
+    "changelog",
+    "cli"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "commander": "^11.1.0",
-    "inquirer": "^9.2.12",
+    "@types/js-yaml": "^4.0.9",
     "chalk": "^5.3.0",
+    "commander": "^11.1.0",
     "fs-extra": "^11.2.0",
+    "inquirer": "^9.2.12",
+    "js-yaml": "^4.1.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
@@ -32,4 +38,4 @@
     "@types/uuid": "^9.0.7",
     "typescript": "^5.3.3"
   }
-} 
+}
