--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "changeset-cli",
+  "name": "@dimensi/changeset-cli",
   "version": "1.0.0",
   "description": "CLI tool for managing changeset files",
   "main": "dist/src/index.js",
