Add publishConfig for public access in package.json, remove message field from ChangesetYaml, and standardize string quotes in utils.ts

--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "changelog",
     "cli"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "author": "",
   "license": "MIT",
   "dependencies": {
