--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "swc src -d dist",
     "dev": "swc src -d dist --watch",
     "start": "node dist/index.js",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "prepublish": "npm run build"
   },
   "keywords": [
     "changeset",
