--- a/package.json
+++ b/package.json
@@ -2,14 +2,20 @@
   "name": "@dimensi/changeset-cli",
   "version": "1.2.3",
   "description": "CLI tool for managing changeset files",
-  "main": "dist/src/index.js",
+  "main": "dist/index.js",
   "type": "module",
   "bin": {
-    "changeset": "dist/src/index.js"
+    "changeset": "dist/index.js"
   },
+  "files": [
+    "dist",
+    "package.json",
+    "README.md",
+    "CHANGELOG.md"
+  ],
   "scripts": {
-    "build": "swc src -d dist",
-    "dev": "swc src -d dist --watch",
+    "build": "swc src -d dist --strip-leading-paths",
+    "dev": "swc src -d dist --watch --strip-leading-paths",
     "start": "node dist/index.js",
     "clean": "rm -rf dist",
     "prepublishOnly": "npm run build"
