--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/inquirer": "^9.0.7",
     "@types/node": "^20.10.5",
     "@types/uuid": "^9.0.7",
+    "chokidar": "^3.6.0",
     "typescript": "^5.3.3"
   }
 }
